So many things.

--- a/dada/installer-disabled/templates/install_or_upgrade.tmpl
+++ b/dada/installer-disabled/templates/install_or_upgrade.tmpl
@@ -31,7 +31,7 @@
 		</div>
 		<!-- /tmpl_if --> 
 		<p><label for="current_dada_files_parent_location">Current .dada_files Location:</label><br/>
-			<input type="text" name="current_dada_files_parent_location" id="current_dada_files_parent_location" value="<!-- tmpl_if found_existing_dada_files_dir --><!-- tmpl_var dada_files_parent_dir --><!-- /tmpl_if -->" style="text-align:right" class="midi" /><span class="fake_input">/<!-- tmpl_var Dada_Files_Dir_Name --></span>
+			<input type="text" name="current_dada_files_parent_location" id="current_dada_files_parent_location" value="<!-- tmpl_if found_existing_dada_files_dir --><!-- tmpl_var dada_files_parent_dir --><!-- /tmpl_if -->" style="text-align:right"  /><span class="fake_input">/<!-- tmpl_var Dada_Files_Dir_Name --></span>
 		</p>
 		</div>
 		
