--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -85,7 +85,7 @@
 
 <form> 
 <div style="text-align:center"> 
-<input type="button" value="Move the, 'dada/installer' Directory, Disable the, 'install.cgi' script" class="cautionary" id="move_installer_dir" />	
+<input type="button" value="Move the, 'dada/installer' Directory, Disable the, 'install.cgi' script" class="cautionary button" id="move_installer_dir" />	
 </div> 
 </form> 
 <div id="move_results"></div> 
