--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -193,7 +193,7 @@
 	
 		<ul class="button-group right">
 			<li><input type="reset"  class="button cautionary" value="Clear Changes"></li>
-			<li><input type="submit" class="button"          , value="Verify Addresses..." <!-- tmpl_if expr="((type eq 'list') && (subscription_quota_reached == 1))" --> disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing"<!-- /tmpl_if -->></li>
+			<li><input type="submit" class="button"          , value="Verify Addresses..." <!-- tmpl_if expr="((type eq 'list') && (subscription_quota_reached == 1))" --> disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing button"<!-- /tmpl_if -->></li>
 		</ul>
 	</form>
 
