--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -94,7 +94,7 @@
             <input type="password" name="root_password" id="root_password" maxlength="24" >
            </td>
            <td>
-            <input type="submit" class="plain" value="Create a New Mailing List..." >
+            <input type="submit" class="plain button" value="Create a New Mailing List..." >
            </td>
           </tr>
          </table>
