--- a/dada/templates/back_link_screen.tmpl
+++ b/dada/templates/back_link_screen.tmpl
@@ -43,8 +43,8 @@
 </p>
 
 <div class="buttonfloat">
- <input type="reset"  class="cautionary" value="Clear Changes" >
- <input type="submit" class="processing" value="Change Back Link" >
+ <input type="reset"  class="cautionary button" value="Clear Changes" >
+ <input type="submit" class="processing button" value="Change Back Link" >
 </div>
 <div class="floatclear"></div>
 
