--- a/dada/templates/confirm_captcha_step_screen.tmpl
+++ b/dada/templates/confirm_captcha_step_screen.tmpl
@@ -31,7 +31,7 @@
 <!-- /tmpl_if -->
 
  <p>
-  <input type="submit" value="Subscribe Me!" class="processing" > 
+  <input type="submit" value="Subscribe Me!" class="processing button" > 
  </p>
 
 </form> 
