--- a/dada/templates/delete_email_screen_filtered.tmpl
+++ b/dada/templates/delete_email_screen_filtered.tmpl
@@ -50,8 +50,8 @@ Remove
 
 
  <div class="buttonfloat">
-  <input type="button" class="cautionary" value="Re-Enter Email List" onclick="history.back()" >
-  <input type="submit" class="processing" value="Unsubscribe Checked <!-- tmpl_var type_title -->" >
+  <input type="button" class="cautionary button" value="Re-Enter Email List" onclick="history.back()" >
+  <input type="submit" class="processing button" value="Unsubscribe Checked <!-- tmpl_var type_title -->" >
  </div>
 </form> 
 <div class="floatclear"></div>
