--- a/dada/templates/error_bad_setup_screen.tmpl
+++ b/dada/templates/error_bad_setup_screen.tmpl
@@ -41,7 +41,7 @@
 <div style="text-align:center">
 	<form accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 		<input type="hidden" name="flavor" value="setup_info" > 
-		<input type="submit" value="Click Here For More Information..." class="cautionary" > 
+		<input type="submit" value="Click Here For More Information..." class="cautionary button" > 
 	</form>
 </div>
 
