--- a/dada/templates/error_invalid_root_password_screen.tmpl
+++ b/dada/templates/error_invalid_root_password_screen.tmpl
@@ -18,7 +18,7 @@ your <!-- tmpl_var PROGRAM_NAME --> script.
 	<p><strong>Root Password</strong><br > 
 	 <input type="hidden" name="flavor" value="new_list" >
 	 <input type="password" name="root_password" maxlength="24" > 
-	 <input type="submit" class="plain" value="log in as <!-- tmpl_var PROGRAM_NAME --> root" > 
+	 <input type="submit" class="plain button" value="log in as <!-- tmpl_var PROGRAM_NAME --> root" > 
 	</p>
 	</form>
 
