--- a/dada/templates/error_no_list_password_screen.tmpl
+++ b/dada/templates/error_no_list_password_screen.tmpl
@@ -18,7 +18,7 @@
 	    </p>
 	
 	 <p style="text-align:center">
-  <input type="submit" class="cautionary" value="Email <!-- tmpl_var name="list_settings.list_name" ESCAPE="HTML" -->'s List Owner a New Mailing List Password" >
+  <input type="submit" class="cautionary button" value="Email <!-- tmpl_var name="list_settings.list_name" ESCAPE="HTML" -->'s List Owner a New Mailing List Password" >
  </p>
 </form>
 
