--- a/dada/templates/list_cp_options_screen.tmpl
+++ b/dada/templates/list_cp_options_screen.tmpl
@@ -138,8 +138,8 @@ List Message Sending Screens
 <input type="hidden" name="process" value="1" >
 <input type="hidden" name="flavor"       value="list_cp_options" >
 <div class="buttonfloat">
- <input type="reset"  class="cautionary" value="Clear Changes" >
- <input type="submit" class="processing" value="Save Changes" >
+ <input type="reset"  class="cautionary button" value="Clear Changes" >
+ <input type="submit" class="processing button" value="Save Changes" >
 </div>
 <div class="floatclear"></div>
 
