--- a/dada/templates/list_unsubscribe.tmpl
+++ b/dada/templates/list_unsubscribe.tmpl
@@ -55,9 +55,9 @@
 		<input type="hidden" id="process" name="process" value="1" > 
 		<input type="text"   id="email" name="email" value="<!-- tmpl_var email escape="HTML" -->" style="font-size:1.5em" >
 		<!-- tmpl_if list_settings.private_list --> 
-			<input type="submit" value="Request Unsubscription" class="processing" style="font-size:1.5em" > 
+			<input type="submit" value="Request Unsubscription" class="processing button" style="font-size:1.5em" > 
 		<!-- tmpl_else --> 
-			<input type="submit" value="Unsubscribe" class="processing"  style="font-size:1.5em" >
+			<input type="submit" value="Unsubscribe" class="processing button"  style="font-size:1.5em" >
 		<!-- /tmpl_if -->
 	</form> 
 
