--- a/dada/templates/mail_sending_options_screen.tmpl
+++ b/dada/templates/mail_sending_options_screen.tmpl
@@ -15,7 +15,7 @@
 				href="#"
 				class="current"
 			>	
-				Option
+				Options
 			</a>
 		</nav>
 	</div>
@@ -410,7 +410,6 @@
 									<a href="#" class="button postfix amazon_verify_email">
 										Verify
 									</a>
-	
 					          </div>
 					        </div>
 					          </div>
