--- a/dada/templates/mass_update_profile_form.tmpl
+++ b/dada/templates/mass_update_profile_form.tmpl
@@ -43,7 +43,7 @@
         <!-- /tmpl_loop --> 
         </table> 
         <div class="buttonfloat"> 
-            <input type="Submit" value="Mass Update" class="processing" >
+            <input type="Submit" value="Mass Update" class="processing button" >
         </div> 
          <div class="floatclear"></div>
 
