--- a/dada/templates/new_list_created_screen.tmpl
+++ b/dada/templates/new_list_created_screen.tmpl
@@ -119,7 +119,7 @@
     <input type="hidden"   name="admin_list" value="<!-- tmpl_var list -->" >
     <input type="password" name="admin_password" id="admin_password" maxlength="24" >
    <input type="hidden" name="auth_state" value="<!-- tmpl_var auth_state -->" > 
-   <input type="submit" class="plain" value="Log Into Your New Mailing List" >   
+   <input type="submit" class="plain button" value="Log Into Your New Mailing List" >   
 </p>
 
    </form>
