--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -67,7 +67,7 @@ these message report summaries.</p>
 <input type="hidden" name="flavor" value="plugins" > 
 <input type="hidden" name="plugin" value="bounce_handler" > 
 <div class="buttonfloat"> 
-	<input type="submit" class="cautionary" id="parse_bounces_button" value="Parse Received Bounces..." >
+	<input type="submit" class="cautionary button" id="parse_bounces_button" value="Parse Received Bounces..." >
 </div> 
 <div class="floatclear"></div> 
 </form>
@@ -200,7 +200,7 @@ Scorecard Preferences
 </table> 
 
 <div class="buttonfloat">   
- <input type="submit" class="processing" value="Save Preferences" > 
+ <input type="submit" class="processing button" value="Save Preferences" > 
  </div>
 <div class="floatclear"></div>
 </form> 
@@ -256,7 +256,7 @@ Scorecard Preferences
      <input type="hidden" name="flavor" value="plugins" > 
      <input type="hidden" name="plugin" value="bounce_handler" > 
   <input type="hidden" name="prm" value="cgi_show_plugin_config" > 
-  <input type="submit" value="View All Plugin Configurations..." class="cautionary" > 
+  <input type="submit" value="View All Plugin Configurations..." class="cautionary button" > 
  </form> 
  </div> 
 
