--- a/dada/templates/plugins/bounce_handler/scorecard.tmpl
+++ b/dada/templates/plugins/bounce_handler/scorecard.tmpl
@@ -101,7 +101,7 @@
 <input type="hidden" name="flavor" value="plugins" > 
 <input type="hidden" name="plugin" value="bounce_handler" > 
 	<div class="buttonfloat">
-	 <input type="submit" class="alertive" onclick="if(!confirm('Are you sure you want to Erase the Bounce Scorecard? This cannot be undone.')){alert('Scorecard Not Erased.');return false;}" name="process" value="Erase Score Card" >
+	 <input type="submit" class="alertive button" onclick="if(!confirm('Are you sure you want to Erase the Bounce Scorecard? This cannot be undone.')){alert('Scorecard Not Erased.');return false;}" name="process" value="Erase Score Card" >
 	</div>
 	<br >
 	<div class="floatclear"></div>
