--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -565,7 +565,7 @@ General
 		</p>
 		<p>
 			<label for="group_list_pp_mode_from_phrase">From: header phrase:</label>
-			<input type="text" class="midi" name="group_list_pp_mode_from_phrase" id="group_list_pp_mode_from_phrase" value="<!-- tmpl_var list_settings.group_list_pp_mode_from_phrase escape="HTML" -->" >
+			<input type="text"  name="group_list_pp_mode_from_phrase" id="group_list_pp_mode_from_phrase" value="<!-- tmpl_var list_settings.group_list_pp_mode_from_phrase escape="HTML" -->" >
 		</p>
 	   </td>
 	  </tr>
@@ -582,7 +582,7 @@ General
 	</td>
 	<td>
 	<p><label for="set_to_header_to_list_address_1">be addressed to the sender</label><br >
-	 <em>(you can still "Reply-All" to send the reply to the sender, as well as the mailing list)</em></p>
+	 <em>(you may still "Reply-All" to send the reply to the sender, as well as the mailing list)</em></p>
 	</td>
 	</tr> 
 	<tr> 
@@ -1077,8 +1077,8 @@ Mailing List Security
  </fieldset> 
 
  <div class="buttonfloat"> 
-  <input type="reset"  class="cautionary" value="Clear Changes" >
-  <input type="submit" class="processing" value="Save Changes" >
+  <input type="reset"  class="cautionary button" value="Clear Changes" >
+  <input type="submit" class="processing button" value="Save Changes" >
  </div> 
  <div class="floatclear"></div> 
  
@@ -1098,7 +1098,7 @@ Mailing List Security
      <input type="hidden" name="flavor" value="plugins" > 
      <input type="hidden" name="plugin" value="bridge" > 
   <input type="hidden" name="prm" value="edit_email_msgs" > 
-  <input type="submit" value="Customize Email Templates..." class="processing" > 
+  <input type="submit" value="Customize Email Templates..." class="processing button" > 
  </form> 
  </div> 
 
@@ -1115,7 +1115,7 @@ Mailing List Security
   <input type="hidden" name="flavor" value="plugins" > 
   <input type="hidden" name="plugin" value="bridge" > 
   <input type="hidden" name="prm" value="cgi_show_plugin_config" > 
-  <input type="submit" value="View All Plugin Configurations..." class="processing" > 
+  <input type="submit" value="View All Plugin Configurations..." class="processing button" > 
  </form> 
  </div> 
 
