--- a/dada/templates/plugins/change_list_shortname/default.tmpl
+++ b/dada/templates/plugins/change_list_shortname/default.tmpl
@@ -23,7 +23,7 @@
 	<input type="hidden" name="prm" id="prm" value="verify_change_list_shortname" >
 	<p><label for="new_name">Your New List Short Name:</label><input type="text" name="new_name" id="new_name" value="" maxlength="16" ></p>
 	<div class="buttonfloat">
-	<input type="button" id="verify_button" value="Verify Your List Short Name Change..." class="alertive" > 
+	<input type="button" id="verify_button" value="Verify Your List Short Name Change..." class="alertive button" > 
 	</div> 
 	<div class="floatclear"></div>
 </form>
