--- a/dada/templates/plugins/change_root_password/default.tmpl
+++ b/dada/templates/plugins/change_root_password/default.tmpl
@@ -54,8 +54,8 @@
 </p>
 
 <div class="buttonfloat">
- <input type="reset"  class="cautionary" >
- <input type="submit" class="processing" value="Change <!-- tmpl_var PROGRAM_NAME --> Root Password" >
+ <input type="reset"  class="cautionary button" >
+ <input type="submit" class="processing button" value="Change <!-- tmpl_var PROGRAM_NAME --> Root Password" >
 </div>
 <div class="floatclear"></div>
 
