--- a/dada/templates/plugins/log_viewer/default.tmpl
+++ b/dada/templates/plugins/log_viewer/default.tmpl
@@ -57,7 +57,7 @@
     	
      <input type="hidden" name="prm" value="search_logs" > 
      <input type="text" name="query" value="" > 
-     <input type="submit" value="Search All Logs" class="processing" > 
+     <input type="submit" value="Search All Logs" class="processing button" > 
     </form>
 		</td> 
    </tr> 
