--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -62,7 +62,7 @@
 					<input type="hidden" name="prm" value="edit_dir" > 
 					<input type="hidden" name="process" value="edit_dir" > 
 					<input type="hidden" name="id" value="<!-- tmpl_var id -->" > 
-					<input type="submit" class="processing" value="Edit " >
+					<input type="submit" class="processing button" value="Edit " >
 				</form>
 		
 		
@@ -73,7 +73,7 @@
 				<input type="hidden" name="prm" value="delete_dir" > 
 				<input type="hidden" name="id" value="<!-- tmpl_var id -->" > 
 	
-				<input type="submit" class="alertive" value="Delete " >
+				<input type="submit" class="alertive button" value="Delete " >
 					</form> 
 		
 					</div>
@@ -202,7 +202,7 @@ Custom Error Page (Path):
 </td>
 <td align="left">
 		<div id="change_default_password_button">
-			<input type="button" value="Click to Change Default Password..." class="cautionary" id="change_password_button">
+			<input type="button" value="Click to Change Default Password..." class="cautionary button" id="change_password_button">
 		</div> 
 		<div id="change_default_password_form" style="display:none">
 					<input type="password" name="default_password" value="" >
@@ -237,8 +237,8 @@ Custom Error Page (Path):
 <!-- /tmpl_unless --> 
 
 <div class="buttonfloat">
-<input type="reset"  class="cautionary" value="Clear All Changes" >
-<input type="submit" class="processing" value="Save All Changes" >
+<input type="reset"  class="cautionary button" value="Clear All Changes" >
+<input type="submit" class="processing button" value="Save All Changes" >
 </div>
 <div class="floatclear"></div>
 
