--- a/dada/templates/plugins/screen_cache/view.tmpl
+++ b/dada/templates/plugins/screen_cache/view.tmpl
@@ -36,7 +36,7 @@
 
 	<form action="<!-- tmpl_var Plugin_URL -->" method="POST"> 
 		<input type="hidden" name="process" value="flush" >
-		 <input type="submit" class="alertive" value="Remove All Cached Screens" >
+		 <input type="submit" class="alertive button" value="Remove All Cached Screens" >
 	</form> 
 
 	 </div>
@@ -76,7 +76,7 @@
 
 		<input type="hidden" name="filename" value="<!-- tmpl_var name -->" --> 
 
-		<input type="submit" class="alertive" value="&#8855;">
+		<input type="submit" class="alertive button" value="&#8855;">
 	   </form> 
 
 	  </td> 
@@ -95,7 +95,7 @@
 		<input type="hidden" name="prm" value="view" >
 		<input type="hidden" name="filename" value="<!-- tmpl_var name -->" --> 
 
-		<input type="submit" class="cautionary" value="View...">
+		<input type="submit" class="cautionary button" value="View...">
 	   </form> 
 
 	  </td> 
