--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -398,7 +398,7 @@
     			<input type="hidden" name="prm"    value="export_subscribers" > 
     			<input type="hidden" name="type" value="opens" > 
     			<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" >
-    			<input type="submit" value="Export Subscribers Opening This Message" class="processing" > 
+    			<input type="submit" value="Export Subscribers Opening This Message" class="processing button" > 
 			</form>
 			</div> 
 			<div class="floatclear"></div>	
@@ -489,7 +489,7 @@
     		<input type="hidden" name="prm"  value="export_subscribers" > 
     		<input type="hidden" name="type" value="clickthroughs" > 
     		<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" >
-    		<input type="submit" value="Export Subscribers Clickthroughing This Message" class="processing" > 
+    		<input type="submit" value="Export Subscribers Clickthroughing This Message" class="processing button" > 
 		</form>
 		</div> 
 		<div class="floatclear"></div>	
@@ -650,7 +650,7 @@
 		    	<input type="hidden" name="flavor"    value="export_subscribers" > 
     			<input type="hidden" name="type" value="abuse_reports" > 
     			<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" >
-			    <input type="submit" value="Export Subscribers Reporting Abuse for This Message" class="processing" > 
+			    <input type="submit" value="Export Subscribers Reporting Abuse for This Message" class="processing button" > 
 			</form>
 			</div> 
 			<div class="floatclear"></div>	
@@ -675,7 +675,7 @@
     		<input type="hidden" name="plugin" value="tracker" > 
     		<input type="hidden" name="prm" value="download_activity_logs" > 
     		<input type="hidden" name="mid" value="<!-- tmpl_var mid -->" >
-    		 <input type="submit" class="processing" name="process" value="Download Raw Activity Logs (.csv)" >
+    		 <input type="submit" class="processing button" name="process" value="Download Raw Activity Logs (.csv)" >
 		</form> 
 		</div>
 
@@ -687,7 +687,7 @@
 
 		<input type="hidden" name="prm" value="download_clickthrough_logs" > 
 		<input type="hidden" name="mid" value="<!-- tmpl_var mid -->" >
-		 <input type="submit" class="processing" name="process" value="Download Raw Clickthrough Logs (.csv)" >
+		 <input type="submit" class="processing button" name="process" value="Download Raw Clickthrough Logs (.csv)" >
 		</form> 
 		</div>
 		<div class="floatclear"></div>
