--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -176,7 +176,7 @@
 				             <input type="hidden" name="flavor" value="profile_fields" > 
 				             <input type="hidden" name="edit_field" value="1" > 
 				             <input type="hidden" name="field"  value="<!-- tmpl_var field -->" > 
-				            <input type="submit" value="[edit]" class="cautionary button small" > 
+				            <input type="submit" value="edit" class="cautionary button small" > 
 				            </form> 
 						</li>
 						<!-- tmpl_if can_move_columns --> 
