--- a/dada/templates/profile_home.tmpl
+++ b/dada/templates/profile_home.tmpl
@@ -286,7 +286,7 @@ function confirm_profile_removal(form_name) {
                                             Hold Mailings
                                         </label> (vacation, etc)     
                                         <div class="buttonfloat">    
-                                        <input type="submit" value="Save Delivery Preferences" class="processing" > 
+                                        <input type="submit" value="Save Delivery Preferences" class="processing button" > 
                                         </div>
                                         <div class="floatclear"></div>                       
                                 </p>
@@ -336,7 +336,7 @@ function confirm_profile_removal(form_name) {
                         </p>
                     <!-- /tmpl_loop -->
                     <div class="buttonfloat">    
-                    <input type="submit" value="Update Information" class="processing" > 
+                    <input type="submit" value="Update Information" class="processing button" > 
                     </div>
                     <div class="floatclear"></div>
                 </form>
@@ -399,7 +399,7 @@ function confirm_profile_removal(form_name) {
                     </p>
 
                 <div class="buttonfloat">    
-                    <input type="submit"  class="processing" value="Confirm and Update Your New Profile Email Address" > 
+                    <input type="submit"  class="processing button" value="Confirm and Update Your New Profile Email Address" > 
                 </div>
                 <div class="floatclear"></div>
             </form>
@@ -435,7 +435,7 @@ function confirm_profile_removal(form_name) {
                    </p>
 
                 <div class="buttonfloat">    
-                <input type="submit"   class="processing"  value="Change Password" > 
+                <input type="submit"   class="processing button"  value="Change Password" > 
                 </div>
                 <div class="floatclear"></div>
             </form>
@@ -457,7 +457,7 @@ function confirm_profile_removal(form_name) {
                 </p> 
 
                 <div class="buttonfloat">    
-                <input type="submit" value="Delete Your Profile" class="alertive" onclick="return confirm_profile_removal(this.form);" > 
+                <input type="submit" value="Delete Your Profile" class="alertive button" onclick="return confirm_profile_removal(this.form);" > 
                 </div>
                 <div class="floatclear"></div>
             </form>
