--- a/dada/templates/profile_login.tmpl
+++ b/dada/templates/profile_login.tmpl
@@ -138,7 +138,7 @@
             <!-- tmpl_if errors_not_logged_in -->     
                 <li>
                     <p>
-                        You'll have to log in, before you can access your profile.
+                        You'll have to log in, before you may access your profile.
                     </p>
                 </li>
             <!-- /tmpl_if -->             
