--- a/dada/templates/resend_conf_captcha_step.tmpl
+++ b/dada/templates/resend_conf_captcha_step.tmpl
@@ -93,7 +93,7 @@ address: </p>
 	  <input type="hidden" name="rm" value="<!-- tmpl_var rm -->" >
 
 	 <p>
-	  <input type="submit" value="Resend Confirmation" class="processing" > 
+	  <input type="submit" value="Resend Confirmation" class="processing button" > 
 	 </p>
 
 </form> 
