--- a/dada/templates/send_archive_form_widget.tmpl
+++ b/dada/templates/send_archive_form_widget.tmpl
@@ -72,7 +72,7 @@
 
 
 <div class="buttonfloat">
-<input type="submit" class="processing" value="Forward to a Friend" >
+<input type="submit" class="processing button" value="Forward to a Friend" >
 <div class="floatclear"></div>
 </div> 
 
