--- a/dada/templates/sending_monitor_button_widget.tmpl
+++ b/dada/templates/sending_monitor_button_widget.tmpl
@@ -4,7 +4,7 @@
  <input type="hidden" name="flavor"    value="sending_monitor" > 
  <input type="hidden" name="type" value="<!-- tmpl_var type -->" > 
  <input type="hidden" name="id"   value="<!-- tmpl_var message_id -->" > 
- <input type="submit" class="processing" value="Monitor Your Mailing!" > 
+ <input type="submit" class="processing button" value="Monitor Your Mailing!" > 
 </form> 
 
 <!-- end sending_monitor_button_widget.tmpl --> 
