--- a/dada/templates/subscriber_field_tags_listing_widget.tmpl
+++ b/dada/templates/subscriber_field_tags_listing_widget.tmpl
@@ -15,7 +15,7 @@
     <div id="subscriber_profile_field_tags" style="display:none">  
 --> 
      
-		<p>You can use the following tags for personalization of your message:</p>
+		<p>You may use the following tags for personalization of your message:</p>
 
  		<ul> 
        <!-- tmpl_loop fields -->
