--- a/dada/templates/text_box_login_form.tmpl
+++ b/dada/templates/text_box_login_form.tmpl
@@ -58,7 +58,7 @@
    </td>
    <td valign="top">
     <input type="password" name="admin_password" size="16" style="vertical-align:top;" maxlength="24" ><!-- HACK: vertical-align is for IE -->
-    <input type="submit" class="plain" value="Login" >
+    <input type="submit" class="plain button" value="Login" >
    </td>
   </tr>
  </table>
