--- a/dada/templates/unsubscribe_request.tmpl
+++ b/dada/templates/unsubscribe_request.tmpl
@@ -7,7 +7,7 @@
 	<input type="hidden" name="flavor" value="u" > 
 	<input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" >
 	<input type="text"   name="email" value="<!-- tmpl_var subscriber.email escape="HTML" -->" >
-	<input class="processing" type="submit" value="Remove."  >
+	<input class="processing button" type="submit" value="Remove."  >
 </form> 
 
 </fieldset> 
