--- a/dada/templates/validate_remove_email_widget.tmpl
+++ b/dada/templates/validate_remove_email_widget.tmpl
@@ -52,7 +52,7 @@
 <!-- /tmpl_loop -->
 
 	 <div class="buttonfloat">	 
-		<input type="submit" value="Remove <!-- tmpl_var email -->" class="cautionary" id="remove_email" >
+		<input type="submit" value="Remove <!-- tmpl_var email -->" class="cautionary button" id="remove_email" >
 	</div> 
 	<div class="floatclear"></div>
 </form> 
