--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -6,12 +6,25 @@
 
 
 
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
-	</div> 
-	<!-- tmpl_include help_link_widget.tmpl -->
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Message Archives
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Advanced Options
+			</a>
+		</nav>
+	</div>
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
+
 
 
 
