--- a/dada/templates/archive_nav_table_widget.tmpl
+++ b/dada/templates/archive_nav_table_widget.tmpl
@@ -1,7 +1,7 @@
 <!-- begin archive_nav_table_widget.tmpl --> 
 
 
-<table  cellpadding="5" style="margin-left: auto; margin-right: auto;"> 
+<table class="responsive" width="100%"> 
  <tr>
   <td valign="top" align="left" width="33%">
    <p>
