--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -182,7 +182,7 @@
             <strong>
             Stationery
             </strong> 
-            are messages that you can use to begin writing new mailing list messages with. They'll 
+            are messages that you may use to begin writing new mailing list messages with. They'll 
             stay around, so that you'll be able to continue to use them as many times as you would like.
         </p>
 
@@ -260,7 +260,7 @@
                             type="button" 
                             name=""
                             value="New Draft From Stationery" 
-                            class="processing" 
+                            class="processing button" 
                             onClick="window.location='<!-- tmpl_var S_PROGRAM_URL -->?flavor=create_from_stationery&screen=<!-- tmpl_var screen escape="HTML" -->&draft_id=<!-- tmpl_var id -->'"
                          >  
                     </td>
