--- a/dada/templates/edit_archived_msg.tmpl
+++ b/dada/templates/edit_archived_msg.tmpl
@@ -36,8 +36,8 @@
  
     
     <div class="buttonfloat">
-     <input type="reset" class="cautionary"  value="Clear Changes" >
-     <input type="submit" class="processing" value="Save Changes" >
+     <input type="reset" class="cautionary button"  value="Clear Changes" >
+     <input type="submit" class="processing button" value="Save Changes" >
     </div>
  </form> 
  
