--- a/dada/templates/edit_archived_msg_prefs_screen.tmpl
+++ b/dada/templates/edit_archived_msg_prefs_screen.tmpl
@@ -45,8 +45,8 @@
 	<input type="hidden" name="id" value="<!-- tmpl_var id -->" >
 
 	<div class="buttonfloat">
-	 <input type="reset" class="cautionary"  value="Clear Changes" >
-	 <input type="submit" class="processing" value="Save Changes" >
+	 <input type="reset" class="cautionary button"  value="Clear Changes" >
+	 <input type="submit" class="processing button" value="Save Changes" >
 	</div>
 	<br >
 	<div class="floatclear"></div>
