--- a/dada/templates/error_invalid_password_screen.tmpl
+++ b/dada/templates/error_invalid_password_screen.tmpl
@@ -50,7 +50,7 @@
     <p style="text-align:center">
 
       <input type="password" name="admin_password" id="admin_password" maxlength="24" > 
-      <input type="submit" class="plain" value="Login" >
+      <input type="submit" class="plain button" value="Login" >
      </p>
     </form> 
    </fieldset> 
@@ -99,7 +99,7 @@
 
 
  <p align="center">
-  <input type="submit" class="cautionary" value="Reset Your Mailing List Password" >
+  <input type="submit" class="cautionary button" value="Reset Your Mailing List Password" >
  </p>
 </form> 
 
