--- a/dada/templates/filter_using_black_list.tmpl
+++ b/dada/templates/filter_using_black_list.tmpl
@@ -13,8 +13,8 @@
   to remove them:
  <p>
  <div class="buttonfloat">
-  <input type="button" class="cautionary" value="Re-Enter Email List" onclick="history.back()" >
-  <input type="submit" class="processing" value="Unsubscribe Checked Emails" >
+  <input type="button" class="cautionary button" value="Re-Enter Email List" onclick="history.back()" >
+  <input type="submit" class="processing button" value="Unsubscribe Checked Emails" >
  </div>
  <div class="floatclear"></div>
  
@@ -39,8 +39,8 @@
   </a>
  </p>
  <div class="buttonfloat">
-  <input type="button" class="cautionary" value="Re-Enter Email List" onclick="history.back()" >
-  <input type="submit" class="processing" value="Unsubscribe Checked Emails" >
+  <input type="button" class="cautionary button" value="Re-Enter Email List" onclick="history.back()" >
+  <input type="submit" class="processing button" value="Unsubscribe Checked Emails" >
  </div>
  <div class="floatclear"></div>
 </form>
