--- a/dada/templates/gpl.tmpl
+++ b/dada/templates/gpl.tmpl
@@ -36,7 +36,7 @@ software--to make sure the software is free for all its users.  This
 General Public License applies to most of the Free Software
 Foundation's software and to any other program whose authors commit to
 using it.  (Some other Free Software Foundation software is covered by
-the GNU Library General Public License instead.)  You can apply it to
+the GNU Library General Public License instead.)  You may apply it to
 your programs, too.
 </p>
 
@@ -45,8 +45,8 @@ When we speak of free software, we are referring to freedom, not
 price.  Our General Public Licenses are designed to make sure that you
 have the freedom to distribute copies of free software (and charge for
 this service if you wish), that you receive source code or can get it
-if you want it, that you can change the software or use pieces of it
-in new free programs; and that you know you can do these things.
+if you want it, that you may change the software or use pieces of it
+in new free programs; and that you know you may do these things.
 </p>
 
 <p>
