--- a/dada/templates/list_login_form.tmpl
+++ b/dada/templates/list_login_form.tmpl
@@ -31,7 +31,7 @@
    <td valign="top" align="right">
     <input type="hidden"   name="admin_list" value="<!-- tmpl_var list_settings.list -->" style="vertical-align:top;" ><!-- HACK: vertical-align is for IE -->
     <input type="password" name="admin_password" id="admin_password" size="16" maxlength="24" >
-    <input type="submit" class="plain" value="Login" >
+    <input type="submit" class="plain button" value="Login" >
    </td>
   </tr>
  </table>
