--- a/dada/templates/manage_script_screen.tmpl
+++ b/dada/templates/manage_script_screen.tmpl
@@ -120,7 +120,7 @@
  advantage of.
 </p>
 <p style="text-align:center">
- <input type="button" class="plain" id="check_version" value="Check Version" data-ver="<!-- tmpl_var VER escape=URL -->" >
+ <input type="button" class="plain button" id="check_version" value="Check Version" data-ver="<!-- tmpl_var VER escape=URL -->" >
 </p>
 <hr >
 
@@ -142,7 +142,7 @@
 	<form method="get" action="http://dadamailproject.com/purchase/pro.html" target="_blank" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 		<input type="hidden" name="ref" value="ms_scrn" > 
 		<p style="text-align:center">
-		<input type="submit" value="Purchase Pro Dada!" class="processing" >  
+		<input type="submit" value="Purchase Pro Dada!" class="processing button" >  
 		</p>
 	</form> 
 
@@ -180,7 +180,7 @@
  <input type="hidden" name="flavor"      value="subscribe" >
  <input type="hidden" name="list"   value="dada_announce" >
  <input type="text"   name="email"  value="<!-- tmpl_var name="list_owner_email" -->" size="24" maxlength="1024" >
- <input type="submit" class="processing" value="Subscribe" >
+ <input type="submit" class="processing button" value="Subscribe" >
 </form>
 
 <h1>
