--- a/dada/templates/plugins/bounce_handler/parse_bounce.tmpl
+++ b/dada/templates/plugins/bounce_handler/parse_bounce.tmpl
@@ -15,7 +15,7 @@
     <input type="hidden" name="plugin" value="bounce_handler" > 
 	<input type="hidden" id="parse_amount"  name="parse_amount"  value="<!-- tmpl_if parse_amount --><!-- tmpl_var parse_amount --><!-- tmpl_else --><!-- tmpl_var MessagesAtOnce --><!-- /tmpl_if -->" > 
 	<input type="hidden" id="test"   name="test"   value="<!-- tmpl_if test --><!-- tmpl_var test --><!-- tmpl_else --><!-- /tmpl_if -->" >
-	<input type="button" value="Parse Bounces" id="parse_bounces_button" class="processing" > 
+	<input type="button" value="Parse Bounces" id="parse_bounces_button" class="processing button" > 
 </form>
 
 <div id="parse_bounce_results_loading"></div> 
