--- a/dada/templates/plugins/change_list_shortname/verify.tmpl
+++ b/dada/templates/plugins/change_list_shortname/verify.tmpl
@@ -73,7 +73,7 @@
 		<input type="hidden" name="prm" id="prm" value="change_list_shortname" >
 		<input type="hidden" name="new_name" id="new_name" value="<!-- tmpl_var new_name -->" > 
 		<div class="buttonfloat">
-		<input type="submit" value="Change your list short name from, &quot;<!-- tmpl_var list_settings.list -->&quot; to, &quot;<!-- tmpl_var new_name -->&quot;" class="processing" > 
+		<input type="submit" value="Change your list short name from, &quot;<!-- tmpl_var list_settings.list -->&quot; to, &quot;<!-- tmpl_var new_name -->&quot;" class="processing button" > 
 		</div> 
 		<div class="floatclear"></div>
 		
