--- a/dada/templates/profile_update_email_confirm.tmpl
+++ b/dada/templates/profile_update_email_confirm.tmpl
@@ -141,7 +141,7 @@
 	<input type="hidden" name="flavor" value="profile_update_email" > 
 	
 	<div class="buttonfloat">
-<input type="submit" value="Update my Profile Email and Mailing List Subscriptions!" class="processing" >	</div>
+<input type="submit" value="Update my Profile Email and Mailing List Subscriptions!" class="processing button" >	</div>
 	<div class="floatclear"></div>
 	
 </form> 
