--- a/dada/templates/report_abuse.tmpl
+++ b/dada/templates/report_abuse.tmpl
@@ -13,7 +13,7 @@
         <textarea rows="8" cols="40" name="abuse_report_details" id="abuse_report_details"></textarea>
     </p>
     <div class="buttonfloat"> 
-        <input type="submit" value="Send Report" class="processing" >
+        <input type="submit" value="Send Report" class="processing button" >
     </div>
     <div class="floatclear"></div> 
 </fieldset> 
