--- a/dada/templates/validate_update_email_widget.tmpl
+++ b/dada/templates/validate_update_email_widget.tmpl
@@ -92,7 +92,7 @@
 
 	
 
-			<input type="submit" value="Update Subscription of: <!-- tmpl_var email --> to, <!-- tmpl_var updated_email -->" class="processing" >
+			<input type="submit" value="Update Subscription of: <!-- tmpl_var email --> to, <!-- tmpl_var updated_email -->" class="processing button" >
 		</form> 
 		
 		<!-- /tmpl_if --> 
