--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -1,16 +1,28 @@
 <!-- begin view_archive_index_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Message Archives &#187; View Archive" -->
+<!-- tmpl_set name="title" value="Message Archives &#187; View" -->
 <div id="screen_meta" data-menu_highlight="view_archive"></div>
 <div id="view_archive"></div> 
 
-
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
-	</div> 
-	<!-- tmpl_include help_link_widget.tmpl -->
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Message Archives
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				View
+			</a>
+		</nav>
+	</div>
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
+
 
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
  <input type="hidden" name="flavor" value="delete_archive" > 
@@ -73,7 +85,7 @@
 		  	href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=edit_archived_msg&id=<!-- tmpl_var id -->"
 			class="button small"
 			>
-				[edit]
+				edit
 			</a>
 		 </td>
 		</tr>
